--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,45 @@
-
+<!doctype html>
+    <html lang="en">
+    <head><title>Patent Registry - Light</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+<link rel="stylesheet" href="assets/css/style.css">
+</head>
+    <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="index.html">Patent Registry</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"> <span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="nav"><ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="applicants.html">Applicants</a></li>
+          <li class="nav-item"><a class="nav-link" href="patents.html">Patents</a></li>
+          <li class="nav-item"><a class="nav-link" href="examiners.html">Examiners</a></li>
+          <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li>
+          <li class="nav-item"><a class="nav-link" href="fees.html">Fees</a></li>
+          <li class="nav-item"><a class="nav-link" href="status.html">Status</a></li>
+        </ul></div>
+      </div>
+    </nav>
+    <header class="hero text-center">
+      <div class="container">
+        <h1 class="display-5">Patent Registration System</h1>
+        <p class="muted">File, review and manage patent applications with transparency and ease.</p>
+        <a href="patents.html" class="btn btn-primary btn-lg me-2">File a Patent</a>
+        <a href="applicants.html" class="btn btn-outline-primary btn-lg">New Applicant</a>
+      </div>
+    </header>
+    <main class="container my-5">
+      <div class="row g-4">
+        <div class="col-md-4" data-aos="fade-up"><div class="card p-4"><img src="assets/img/icon.svg" class="icon mb-3"><h5>Applicant Registration</h5><p class="muted">Create and update applicant profiles.</p></div></div>
+        <div class="col-md-4" data-aos="fade-up"><div class="card p-4"><img src="assets/img/icon.svg" class="icon mb-3"><h5>Patent Applications</h5><p class="muted">Submit and track applications.</p></div></div>
+        <div class="col-md-4" data-aos="fade-up"><div class="card p-4"><img src="assets/img/icon.svg" class="icon mb-3"><h5>Examination</h5><p class="muted">Review and record decisions.</p></div></div>
+      </div>
+    </main>
+    <footer>© 2025 Patent Registry</footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script>AOS.init();</script>
+    </body></html>
