--- a/frontend/applicants.html
+++ b/frontend/applicants.html
@@ -14,4 +14,7 @@
           </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/main.js"></script></body></html>
+        <script src="assets/js/main.js"></script>
+        <script src="assets/js/applicants-backend.js"></script>
+        </body>
+        </html>
