--- a/frontend/patents.html
+++ b/frontend/patents.html
@@ -1,12 +1,35 @@
-<!doctype html><html lang="en"><head><title>Patents</title>
+<!doctype html>
+<html lang="en">
+  <head><title>Patents</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
-</head><body>
-        <nav class="navbar navbar-expand-lg"><div class="container"><a class="navbar-brand" href="index.html">Patent Registry</a></div></nav>
-        <div class="container py-5"><div class="row"><div class="col-md-6"><div class="card p-4"><h4>File Patent</h4>
-          <form id="patForm"><input name="title" class="form-control mb-2" placeholder="Title" required><input name="application_number" class="form-control mb-2" placeholder="Application number" required><input name="filing_date" class="form-control mb-2" placeholder="YYYY-MM-DD"><button class="btn btn-primary">Submit (simulate)</button></form></div></div>
-          <div class="col-md-6"><div class="card p-4"><h4>Recent</h4><ul id="patList" class="list-group"></ul></div></div></div></div>
-        <script src="assets/js/main.js"></script></body></html>
+</head>
+<body>
+        <nav class="navbar navbar-expand-lg">
+          <div class="container">
+            <a class="navbar-brand" href="index.html">Patent Registry</a>
+          </div>
+        </nav>
+        <div class="container py-5">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="card p-4"><h4>File Patent</h4>
+          <form id="patForm">
+            <input name="title" class="form-control mb-2" placeholder="Title" required>
+            <input name="application_number" class="form-control mb-2" placeholder="Application number" required>
+            <input name="filing_date" class="form-control mb-2" placeholder="YYYY-MM-DD"><button class="btn btn-primary">Submit (simulate)</button>
+          </form>
+        </div>
+      </div>
+          <div class="col-md-6"><div class="card p-4"><h4>Recent</h4>
+            <ul id="patList" class="list-group"></ul>
+          </div>
+        </div>
+      </div>
+    </div>
+          <script src="assets/js/patents-backend.js"></script>
+        </body>
+        </html>
