--- a/frontend/applicants.html
+++ b/frontend/applicants.html
@@ -4,7 +4,9 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
-</head><body>
+</head>
+<body class="applicants-page">
+
         <nav class="navbar navbar-expand-lg"><div class="container"><a class="navbar-brand" href="index.html">Patent Registry</a></div></nav>
         <div class="container py-5">
           <div class="row g-4">
