--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,45 +1,111 @@
 <!doctype html>
-    <html lang="en">
-    <head><title>Patent Registry - Light</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Patent Registry - Light</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+  <!-- Page-scoped styles for the clickable cards -->
+  <style>
+    .home-grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap:1.5rem; }
+    .home-card {
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+      min-height: 160px;
+      color: #fff;
+      display:flex;
+      align-items:flex-start;
+      transition: transform .22s ease, box-shadow .22s ease;
+      text-decoration:none;
+      background: #ffffff;
+      box-shadow: 0 8px 20px rgba(22,28,37,0.06);
+    }
+    .home-card:focus, .home-card:hover { transform: translateY(-6px); box-shadow: 0 18px 30px rgba(22,28,37,0.12); text-decoration:none; }
+    .home-card .bg { position:absolute; inset:0; background-size:cover; background-position:center; filter: saturate(.95) contrast(.92) brightness(.85); }
+    .home-card .overlay { position:absolute; inset:0; background: linear-gradient(180deg, rgba(0,0,0,0.14), rgba(0,0,0,0.36)); pointer-events:none; }
+    .home-card .content { position:relative; z-index:2; padding:1.4rem; width:100%; color:#fff; }
+    .home-card .icon { width:48px; height:48px; border-radius:999px; background:rgba(255,255,255,0.92); display:flex; align-items:center; justify-content:center; color:#0b5ed7; font-weight:700; margin-bottom:.6rem; }
+    .home-card h5 { color:#fff; font-weight:600; margin-bottom:.25rem; }
+    .home-card p { color: rgba(255,255,255,0.92); margin-bottom:0; }
+    /* Keep existing card visuals on small screens */
+    @media (max-width:576px){ .home-card { min-height:140px; } }
+    /* Anchor reset */
+    .home-card { color: inherit; }
+  </style>
 </head>
-    <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand fw-bold" href="index.html">Patent Registry</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"> <span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="nav"><ul class="navbar-nav ms-auto">
+<body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">Patent Registry</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"> <span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="applicants.html">Applicants</a></li>
           <li class="nav-item"><a class="nav-link" href="patents.html">Patents</a></li>
           <li class="nav-item"><a class="nav-link" href="examiners.html">Examiners</a></li>
           <li class="nav-item"><a class="nav-link" href="documents.html">Documents</a></li>
           <li class="nav-item"><a class="nav-link" href="fees.html">Fees</a></li>
           <li class="nav-item"><a class="nav-link" href="status.html">Status</a></li>
-        </ul></div>
+        </ul>
       </div>
-    </nav>
-    <header class="hero text-center">
-      <div class="container">
-        <h1 class="display-5">Patent Registration System</h1>
-        <p class="muted">File, review and manage patent applications with transparency and ease.</p>
-        <a href="patents.html" class="btn btn-primary btn-lg me-2">File a Patent</a>
-        <a href="applicants.html" class="btn btn-outline-primary btn-lg">New Applicant</a>
-      </div>
-    </header>
-    <main class="container my-5">
-      <div class="row g-4">
-        <div class="col-md-4" data-aos="fade-up"><div class="card p-4"><img src="assets/img/icon.svg" class="icon mb-3"><h5>Applicant Registration</h5><p class="muted">Create and update applicant profiles.</p></div></div>
-        <div class="col-md-4" data-aos="fade-up"><div class="card p-4"><img src="assets/img/icon.svg" class="icon mb-3"><h5>Patent Applications</h5><p class="muted">Submit and track applications.</p></div></div>
-        <div class="col-md-4" data-aos="fade-up"><div class="card p-4"><img src="assets/img/icon.svg" class="icon mb-3"><h5>Examination</h5><p class="muted">Review and record decisions.</p></div></div>
-      </div>
-    </main>
-    <footer>© 2025 Patent Registry</footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="assets/js/main.js"></script>
-    <script>AOS.init();</script>
-    </body></html>
+    </div>
+  </nav>
+
+  <header class="hero text-center">
+    <div class="container">
+      <h1 class="display-5">Patent Registration System</h1>
+      <p class="muted">File, review and manage patent applications with transparency and ease.</p>
+      <a href="patents.html" class="btn btn-primary btn-lg me-2">File a Patent</a>
+      <a href="applicants.html" class="btn btn-outline-primary btn-lg">New Applicant</a>
+    </div>
+  </header>
+
+  <main class="container my-5">
+    <div class="home-grid" data-aos="fade-up">
+      <!-- Card 1: Applicant Registration -->
+      <a href="applicants.html" class="home-card" aria-label="Applicant Registration">
+        <div class="bg" style="background-image:url('assets/img/home_applicant.jpg')"></div>
+        <div class="overlay"></div>
+        <div class="content">
+          <div class="icon"><img src="assets/img/icon.svg" alt="" style="width:22px;height:22px"></div>
+          <h5>Applicant Registration</h5>
+          <p class="muted">Create and update applicant profiles.</p>
+        </div>
+      </a>
+
+      <!-- Card 2: Patent Applications -->
+      <a href="patents.html" class="home-card" aria-label="Patent Applications">
+        <div class="bg" style="background-image:url('assets/img/home_patents.jpg')"></div>
+        <div class="overlay"></div>
+        <div class="content">
+          <div class="icon"><img src="assets/img/icon.svg" alt="" style="width:22px;height:22px"></div>
+          <h5>Patent Applications</h5>
+          <p class="muted">Submit and track applications.</p>
+        </div>
+      </a>
+
+      <!-- Card 3: Examination -->
+      <a href="examiners.html" class="home-card" aria-label="Examination">
+        <div class="bg" style="background-image:url('assets/img/home_examination.jpg')"></div>
+        <div class="overlay"></div>
+        <div class="content">
+          <div class="icon"><img src="assets/img/icon.svg" alt="" style="width:22px;height:22px"></div>
+          <h5>Examination</h5>
+          <p class="muted">Review and record decisions.</p>
+        </div>
+      </a>
+    </div>
+  </main>
+
+  <footer class="text-center py-3">© 2025 Patent Registry</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script>AOS.init();</script>
+</body>
+</html>
