--- a/frontend/status.html
+++ b/frontend/status.html
@@ -1,10 +1,56 @@
-<!doctype html><html lang="en"><head><title>Status</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
-</head><body>
-        <nav class="navbar navbar-expand-lg"><div class="container"><a class="navbar-brand" href="index.html">Patent Registry</a></div></nav>
-        <div class="container py-5"><div class="card p-4"><h4>Legal Status</h4><div id="statusList"></div></div></div>
-        <script src="assets/js/main.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Status</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body class="status-page">
+
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Patent Registry</a>
+    </div>
+  </nav>
+
+  <div class="container py-5">
+    <div class="row g-4">
+      <div class="col-md-5">
+        <div class="card p-4">
+          <h4 class="mb-3">Add Status</h4>
+
+          <form id="statusForm">
+            <label for="statusPatentSelect" class="form-label">Patent</label>
+            <select id="statusPatentSelect" name="patent_id" class="form-control mb-2" required>
+              <option value="">Loading patents…</option>
+            </select>
+
+            <label for="status_text" class="form-label">Status</label>
+            <input name="status_text" id="status_text" class="form-control mb-2" placeholder="e.g. Filed / Examined / Granted" required>
+
+            <label for="status_type" class="form-label">Type (optional)</label>
+            <input name="status_type" id="status_type" class="form-control mb-3" placeholder="short type label">
+
+            <button class="btn btn-primary" type="submit">Add Status</button>
+          </form>
+        </div>
+      </div>
+
+      <div class="col-md-7">
+        <div class="card p-4">
+          <h4 class="mb-3">Legal Status</h4>
+          <div id="statusList" class="list-group">
+            <!-- JS will populate status items here -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/status-backend.js"></script>
+</body>
+</html>
