--- a/frontend/examiners.html
+++ b/frontend/examiners.html
@@ -94,7 +94,7 @@
     </div>
   </div>
 
-  
+  <script src="assets/js/auth-ui.js"></script>
   <script src="assets/js/examiners-backend.js"></script>
 </body>
 </html>
