--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,5 +107,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script src="assets/js/main.js"></script>
   <script>AOS.init();</script>
+  <script src="assets/js/auth-ui.js"></script>
 </body>
 </html>
